objects/Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(End_Time__c-Start_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FolderID__c</fullName>
        <label>FolderID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Agenda</relationshipLabel>
        <relationshipName>Agenda</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agenda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Agenda</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Meeting_Attendee__c</fullName>
        <label>Meeting Attendee</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Presenter__c</fullName>
        <label>Presenter</label>
    </sharingReasons>
</CustomObject>